force-app/main/default/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>AssociateCount__c</fullName>
        <label>Associate Count</label>
        <summaryForeignKey>Training_Assignment__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Caliber_Number_of_Weeks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Caliber Number of Weeks</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caliber_Training_Type__c</fullName>
        <label>Caliber Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revature</fullName>
                    <default>true</default>
                    <label>Revature</label>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoTrainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Trainer</label>
        <referenceTo>External_Trainer__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromotionCeremonyDate__c</fullName>
        <label>Promotion Ceremony Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetCapacity__c</fullName>
        <label>Target Capacity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrainingClass__c</fullName>
        <formula>RIGHT(TEXT(MONTH(StartDate__c)), 2) + &apos;/&apos; + LPAD(TEXT(DAY(StartDate__c)), 2, &apos;0&apos;) + &apos; - &apos; + TrainingLocation__r.OfficeName__c + &apos; - &apos; + TrainingTrack__r.ShortName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location</label>
        <referenceTo>Training_Location__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrainingRoom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Room</label>
        <referenceTo>Training_Room__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrainingTarget__c</fullName>
        <label>Training Target</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrainingTrack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Track</label>
        <referenceTo>Training_Track__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Location_Name__c</fullName>
        <formula>TrainingLocation__r.OfficeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location Name</label>
        <type>Text</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trainer__c</columns>
        <columns>TrainingTrack__c</columns>
        <columns>Status__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Training_Location_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>TrainingTrack__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>Trainer__c</columns>
        <columns>Training_Location_Name__c</columns>
        <columns>TrainingRoom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>All Confirmed</label>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>TrainingTrack__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>Trainer__c</columns>
        <columns>Training_Location_Name__c</columns>
        <columns>TrainingRoom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All In Progress</label>
    </listViews>
    <listViews>
        <fullName>All_Planned</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TrainingTrack__c</columns>
        <columns>Status__c</columns>
        <columns>Trainer__c</columns>
        <columns>CoTrainer__c</columns>
        <columns>Training_Location_Name__c</columns>
        <columns>TrainingRoom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>All Planned</label>
    </listViews>
    <nameField>
        <displayFormat>TRNG-{00000000}</displayFormat>
        <label>Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
    </sharingReasons>
    <validationRules>
        <fullName>Start_Date_Weekday</fullName>
        <active>true</active>
        <errorConditionFormula>((WEEKDAY(StartDate__c) == 1) || (WEEKDAY(StartDate__c) &gt; 4)) = TRUE</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date of a batch must be a Monday, Tuesday or a Wednesday.</errorMessage>
    </validationRules>
</CustomObject>