force-app/main/default/objects/Training__c/validationRules/CoTrainerRequiresTrainer.validationRule-meta.xml
<ValidationRule>
    <fullName>CoTrainerRequiresTrainer</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL( Trainer__c ) , NOT( ISNULL( CoTrainer__c ) ) )</errorConditionFormula>
    <errorDisplayField>Trainer__c</errorDisplayField>
    <errorMessage>Cannot have Cotrainer without a lead Trainer.</errorMessage>
</ValidationRule>