force-app/main/default/objects/Training__c/validationRules/EndDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( EndDate__c )</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date required.</errorMessage>
</ValidationRule>