force-app/main/default/objects/Training__c/validationRules/Start_Date_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Weekday</fullName>
    <active>true</active>
    <errorConditionFormula>((WEEKDAY(StartDate__c) == 1) || (WEEKDAY(StartDate__c) &gt; 4)) = TRUE</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Start Date of a batch must be a Monday, Tuesday or a Wednesday.</errorMessage>
</ValidationRule>