force-app/main/default/objects/Training__c/validationRules/StartDateNotInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateNotInPast</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Cannot create a new Batch in the past. May only create Batches which start today or later.</errorMessage>
</ValidationRule>