force-app/main/default/objects/Training__c/validationRules/StartDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateRequired</fullName>
    <active>true</active>
    <description>Require a Start Date when making a new Batch</description>
    <errorConditionFormula>ISBLANK(StartDate__c)</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>Batch must have a Start Date.</errorMessage>
</ValidationRule>