force-app/main/default/objects/Training__c/listViews/All_Planned.listView-meta.xml
<ListView>
    <fullName>All_Planned</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TrainingTrack__c</columns>
    <columns>Status__c</columns>
    <columns>Trainer__c</columns>
    <columns>CoTrainer__c</columns>
    <columns>Training_Location_Name__c</columns>
    <columns>TrainingRoom__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <label>All Planned</label>
</ListView>